DropdownWidget: Fix vertical alignment with other widgets in some layouts
Fixes alignment in layouts like ActionFieldLayout. DropdownInputWidget has
had `vertical-align: middle` set from the start 4 years ago.
Seems like we should standardized vertical alignment default per widget in
order to prevent such issues for the future.

Bug: T179755

--- a/src/styles/widgets/DropdownWidget.less
+++ b/src/styles/widgets/DropdownWidget.less
@@ -3,6 +3,7 @@
 .oo-ui-dropdownWidget {
 	display: inline-block;
 	position: relative;
+	vertical-align: middle;
 
 	&-handle {
 		position: relative;
